<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#fff"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direction_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/os_l"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorTextGray"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/loansBtn"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_offer"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/os_sb"
                android:textColor="@color/colorText2"
                android:text="@string/loans"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardsBtn"
        app:layout_constraintTop_toBottomOf="@+id/loansBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_money"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/os_sb"
                android:textColor="@color/colorText2"
                android:text="@string/cards"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/newsBtn"
        app:layout_constraintTop_toBottomOf="@+id/cardsBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_newspaper"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/os_sb"
                android:textColor="@color/colorText2"
                android:text="@string/news"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calculatorBtn"
        app:layout_constraintTop_toBottomOf="@+id/newsBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_calculator"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/os_sb"
                android:textColor="@color/colorText2"
                android:text="@string/locans"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/privacyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_shield"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/os_r"
            android:text="@string/privacy"
            android:textColor="@color/colorText2"/>
        
    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>